--- a/bestcars.db.properties
+++ b/bestcars.db.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.4.1
-#Thu Oct 03 16:06:57 EEST 2019
-version=2.4.1
-modified=yes
+#Sat Oct 05 14:46:21 MSK 2019
 tx_timestamp=0
+modified=yes
+version=2.4.1
