--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
-spring.datasource.url=jdbc:hsqldb:file:./bestcars.db
+#spring.datasource.url=jdbc:hsqldb:file:./bestcars.db
+
+#Servers(tomcat) port
+#server.port=8080
+
+#MySql settings
+#sql.database.driver.class.name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/bestcars?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=pass
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#
+##Hibernates settings
+#spring.jpa.hibernate.ddl-auto=update
+#hibernate.show_sql=false
+#hibernate.format_sql=false
+
+#hibernate.enable_lazy_load_no_trans=false
+
+#hibernate.jdbc.lob.non_contextual_creation=true
+#hibernate.connection.useUnicode=true
+#hibernate.connection.characterEncoding=UTF8MB4
+
+jdbc.driver-class-name:com.mysql.jdbc.Driver
+jdbc.show-sql:true
+
+#First Datasource (DB1)
+db1.datasource.url:jdbc:mysql://localhost:3306/bestcars?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+db1.datasource.username:root
+db1.datasource.password:pass
+spring.jpa.hibernate.ddl-auto=update
+
+#Seccond Datasource (DB2)
+#db2.datasource.url:jdbc:mysql://localhost:3306/db2?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
+#db2.datasource.username:root
+#db2.datasource.password:54321
+
+spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
