--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,9 @@
 #hibernate.connection.characterEncoding=UTF8MB4
 
 jdbc.driver-class-name:com.mysql.jdbc.Driver
-jdbc.show-sql:true
+jdbc.show_sql:true
+jdbc.format_sql:true
+jdbc.use_sql_comments:true
 
 #First Datasource (DB1)
 db1.datasource.url:jdbc:mysql://localhost:3306/bestcars?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
